more vs gitignores, pthreads etc. only on linux, port now 50000

--- a/Client.html
+++ b/Client.html
@@ -56,7 +56,7 @@
         }
 
         try {
-            serverURL = "ws://localhost/:5000"
+            serverURL = "ws://localhost:50000"
             webSocket = new WebSocket(serverURL);
             webSocket.binaryType = 'arraybuffer';
 
