--- a/Client.html
+++ b/Client.html
@@ -1,31 +1,91 @@
 <html>
 <style>
+    .roastProperties {
+        border: 1px solid #c3c3c3;
+        position: fixed;
+        left: 0;
+        right: 0;
+        margin: 5% auto;
+        width: 500px;
+        padding: 20px;
+        border-radius: 20px;
+        box-shadow: 0px 0px 10px 5px #c3c3c3;
+        background-color: white;
+    }
+
+    .roastPropertiesTitle {
+        width: 100%;
+        display: block;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .closeButton {
+        position: absolute;
+        right: 15px;
+        top: 12px;
+        border: 1px solid #a3a3a3;
+        box-shadow: 0px 0px 3px 1px #c3c3c3;
+        border-radius: 10px;
+        padding: 3px 8px 5px 8px;
+        text-decoration: none;
+        cursor: pointer;
+        font-family: Arial;
+    }
+
+    .closeButton:hover
+    {
+        color: white;
+        background-color: #c3c3c3;
+    }
+
+    .closeButton:active{
+        color:white;
+        background-color: #a3a3a3;
+    }
+
+    .lineChart {
+        border: 1px solid #c3c3c3;
+    }
+
+    .thermalCam {
+        border:1px solid #c3c3c3; 
+        width: 320px;
+        height: 240px;
+        background-color: grey;
+        vertical-align: top;
+        margin: 0px 20px 20px 20px;
+    }
+
     .controller {
         outline: 2px solid #aaa;
         border-radius: 20px;
         background-color: #555;
-        width: 300px;
-        height: 50px;
-        display: block;
+        width: 50px;
+        height: 300px;
+        display: flex;
         margin: 20px;
         user-select: none;
     }
 
     .controller > span {
-        height: inherit;
+        width: inherit;
         background-color: #fff;
         background-size: 100% 100%;
         display: block;
         border-radius: 20px;
+        align-self: flex-end;
     }
 
     .controller > span > span {
         display: flex;
-        height: inherit;
-        justify-content: left;
-        align-items: center;
+        height: 100%;
         color: #555;
-        padding-left: 15px;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        position: relative;
+        bottom: 15px;
     }
 
     .fanImage {
@@ -42,34 +102,67 @@
     }
 </style>
 <body>
-    <div id="fanController" class="controller">
-        <span style="width: 70%;">
-            <span><img src="img/fan.png" width="30" class="fanImage" /></span>
-            <!--Icon created by Dreamstale - Flaticon-->
-        </span>
+    <!--
+    Roast properties:
+        date time, roast name, blend, individual bean types, batch, weights, volumes,
+        density calculation, moisture, bean screen size, ambient temp/humidity/pressure,
+        end weight, end volume, end density
+    -->
+    <div id="roastProp" class="roastProperties">
+        <span class="closeButton" onclick="hideRoastProperties();">X</span>
+        <span class="roastPropertiesTitle">Roast Properties:</span>
+        Roast Name: <input type="text" id="roastName" value="Light sweet roast" /> <br />
+        Date: <input type="date" id="roastDate" /> Time <input type="time" id="roastTime" /> <br />
+        Bean type: <input type="text" id="beanType" value="Ethiopia Natural Djimmah" /> <br />
+        Bean weight (g): <input type="number" value="200" /> <br />
+        End weight (g): <input type="number" value="185" /> <br />
+        Bean volume (mL): <input type="number" value="10" /> <br />
+        End volume (mL): <input type="number" value="11" /> <br />
+        Density (g/mL): <input type="number" readonly="readonly" value="20" /> <br />
+        End density (g/mL): <input type="number" readonly="readonly" value="16.8" /> <br />
+        Moisture content (%): <input type="number" value="10" /> <br />
+        Bean screen size (1/64"): <input type="number" value="18" /> <br />
+        Ambient Temperature (°C) <input type="number" value="24" /> <br />
+        Ambient humidity (%) <input type="number" value="43" /> <br />
+        Ambient pressure (atm) <input type="number" value="1" /> <br />
+
+
     </div>
 
-    <div id="motorController" class="controller">
-        <span style="width: 70%;">
-            <span><img src="img/motor.png" width="45" style="opacity:0.75;" /></span>
-            <!--Icon created by monkik - Flaticon-->
-        </span>
+    <div style="display: flex; flex-direction: row;">
+        <canvas id="lineChart" class="lineChart">
+            Your browser does not support the canvas element.
+        </canvas>
+
+        <div style="display: flex; flex-direction: column;">
+            <canvas id="thermalCamera" width="320" height="240" class="thermalCam">
+                Your browser does not support the canvas element.
+            </canvas>
+
+            <div id="controllers" style="display: flex; flex-direction: row; justify-content: space-evenly;">
+                <div id="fanController" class="controller">
+                    <span style="height: 70%;">
+                        <span><img src="img/fan.png" width="30" class="fanImage" /></span>
+                        <!--Icon created by Dreamstale - Flaticon-->
+                    </span>
+                </div>
+
+                <div id="motorController" class="controller">
+                    <span style="height: 70%;">
+                        <span><img src="img/motor.png" width="50" style="opacity:0.75; rotate: 270deg;" /></span>
+                        <!--Icon created by monkik - Flaticon-->
+                    </span>
+                </div>
+
+                <div id="motorController" class="controller">
+                    <span style="height: 70%;">
+                        <span><img src="img/fire.png" width="40" style="opacity:0.75;" /></span>
+                        <!--Icon created by Those Icons - Flaticon-->
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div id="motorController" class="controller">
-        <span style="width: 70%;">
-            <span><img src="img/fire.png" width="35" style="opacity:0.75;" /></span>
-            <!--Icon created by Those Icons - Flaticon-->
-        </span>
-    </div>
-
-    <canvas id="thermalCamera" width="0" height="0" style="border:1px solid #c3c3c3; visibility: hidden;">
-        Your browser does not support the canvas element.
-    </canvas>
-
-    <canvas id="lineChart" style="border:1px solid #c3c3c3; visibility: hidden;">
-        Your browser does not support the canvas element.
-    </canvas>
 
     <div id="test"></div>
 
@@ -77,41 +170,50 @@
 
     <script>
         // Heating elements:
-        // afterburner 120v (2 wire)
-        // quartz heater 120v
+        // afterburner 230v (2 wire)
+        // quartz heater 115v each
         //
         // Motors to be controlled:
-        // dc fan 12v 0.2a (2 wire)
+        // dc exhaust fan 12v 0.2a (2 wire)
+        // dc logic board cooling fan 12v 0.2a (2 wire)
         // drum motor 16v (2 wire)
-        // scroll / cooling fan 120v
+        // afterburner draw fan 230v
+        // scroll / cooling fan 230v
         //
         // On/off switch:
-        // light bulb 120v
+        // light bulb 230v
         //
         // Sensors:
-        // thermocouple(s) 120v
+        // draw fan thermocouple
+        // exhaust fan thermocouple
+        // main chamber thermocouple
         // thermal camera 3.3v
 
         var isDown = false;
+        var initialYPos = 0.0;
+        var clickedElem = undefined;
 
         document.addEventListener("mouseup", controlFunc);
+        document.addEventListener("mousemove", controlFunc);
 
         for (c of document.getElementsByClassName("controller")) {
             c.addEventListener("mousedown", controlFunc);
-            c.addEventListener("mousemove", controlFunc);
 
             c.addEventListener("touchstart", controlFunc);
             c.addEventListener("touchend", controlFunc);
             c.addEventListener("touchmove", controlFunc);
         }
 
-        function controlMove(xPos, elem) {
-            var percentage = (xPos - 29) / elem.clientWidth * 100;
-            if (percentage > 97)
+        function controlMove(initial, yPos, elem) {
+            var curPercentage = elem.firstElementChild.clientHeight / elem.clientHeight;
+            var delta = (initial - yPos);
+            var percentage = (curPercentage + delta / elem.clientHeight) * 100;
+
+            if (percentage > 100)
                 percentage = 100;
-            else if (percentage < 3)
+            else if (percentage < 0)
                 percentage = 0;
-            elem.firstElementChild.style = "width: " + percentage + "%;";
+            elem.firstElementChild.style = "height: " + percentage + "%;";
 
             if (elem.getElementsByTagName("img")[0].className == "fanImage") {
                 var animLen = 4 - 3.8 * percentage / 100;
@@ -127,22 +229,24 @@
         function controlFunc(e) {
             if (e.type == "mousedown") {
                 isDown = true;
-
-                controlMove(e.x, this);
+                initialYPos = e.y;
+                clickedElem = this;
             }
             else if (e.type == "touchstart") {
                 isDown = true;
-
-                controlMove(e.targetTouches[0].clientX, this);
+                initialYPos = e.targetTouches[0].clientY;
+                clickedElem = this;
             }
             else if (e.type == "mousemove") {
                 if (isDown) {
-                    controlMove(e.x, this);
+                    controlMove(initialYPos, e.y, clickedElem);
+                    initialYPos = e.y;
                 }
             }
             else if (e.type == "touchmove") {
                 if (isDown) {
-                    controlMove(e.targetTouches[0].clientX, this);
+                    controlMove(initialYPos, e.targetTouches[0].clientY, clickedElem);
+                    initialYPos = e.targetTouches[0].clientY;
                 }
             }
             else if (e.type == "mouseup" || e.type == "touchend") {
@@ -152,6 +256,13 @@
             if (e.type == "mousedown" || e.type == "mousemove") {
                 e.preventDefault();
             }
+        }
+
+        function showRoastProperties() {
+            document.getElementById('roastProp').style.visibility = "visible";
+        }
+        function hideRoastProperties() {
+            document.getElementById('roastProp').style.visibility = "hidden";
         }
 
         class LineChart {
