changed controller color

--- a/Client.html
+++ b/Client.html
@@ -213,7 +213,7 @@
     .controller {
         box-shadow: -5px -5px 10px #fff, 5px 5px 10px #babecc;
         border-radius: 20px;
-        background-color: #c5c5cc;
+        background-color: #d1d4e0;
         width: 50px;
         height: 300px;
         display: flex;
