--- a/Client.html
+++ b/Client.html
@@ -49,7 +49,8 @@
     }
 
     input:disabled {
-        box-shadow: -2px -2px 2px #fff, 3px 3px 5px #babecc;
+        box-shadow: none;
+        border: 1px solid #bebebe;
     }
 
     #actions{
