adjusted line chart style

--- a/Client.html
+++ b/Client.html
@@ -557,8 +557,8 @@
                 horizontalLabelArray, verticalLabelArray
             ) {
                 //vertical axis title
-                this.#ctx.font = "20px Times New Roman";
-                this.#ctx.fillStyle = "black";
+                this.#ctx.font = "20px Verdana";
+                this.#ctx.fillStyle = "#676767";
                 this.#ctx.fillText(verticalAxisTitleStr, 10, 20);
 
                 //horizontal axis title
@@ -599,7 +599,7 @@
                     return;
                 }
 
-                this.#ctx.strokeStyle = 'rgba(0, 0, 0, 1)';
+                this.#ctx.strokeStyle = '#676767';
                 this.#ctx.lineCap = "round";
                 this.#ctx.lineJoin = "round";
                 this.#ctx.lineWidth = 4.0;
